--- a/package.json
+++ b/package.json
@@ -76,6 +76,7 @@
     "ganache-cli": "6.5.0",
     "merkle-patricia-tree": "2.3.2",
     "openzeppelin-solidity": "2.2.0",
+    "solidity-coverage": "^0.6.7",
     "solidity-rlp": "^2.0.0",
     "truffle-hdwallet-provider": "^1.0.17"
   }
